[project]
name = "probCOmp"
dynamic = ["version"]
authors = [
    {name = "ejkroon"},
]
description = "Probabilistic comparison of ceramic chaînes opératoires."
readme = "README.md"
requires-python = ">=3.12.4"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows :: Windows 11",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/ejkroon/probCOmp"
